# jira-cli

./: .conf.yaml  .gitignore  Cargo.toml  custom_fields.json  custom_fields_ESTRT.json  custom_fields_ESTRT.reversed.json  custom_fields_JC.json  custom_fields_JC.reversed.json  most_used_fields.json  sample  stories-bff-fed.yaml  stories-cws.yaml  stories-micronaut.yaml  stories-single.yaml  stories.yaml  template.yaml
.jira-cli/: conf.yaml  custom_fields  custom_fields.json  custom_fields_ESTRT.json  most_used_fields.json
src/: custom_fields.rs  epic.rs  fields.rs  file_utilities.rs  jira_structs.rs  main.rs  mod.rs  project.rs  stories.rs  traits.rs
src/commons/: custom_fields.rs  file_utilities.rs  mod.rs  req_builder.rs  structs.rs  traits.rs
src/epics/: command_args.rs  epics.rs  epics_projects.rs  list.rs  mod.rs
src/issues/: epic.rs  mod.rs  project.rs  stories.rs  stories_args.rs
src/projects/: command_args.rs  list.rs  mod.rs  projects_structs.rs
src/stories/: add.rs  command_args.rs  list.rs  mod.rs  stories.rs  stories_structs.rs
