[package]
name = "jira-cli"
version = "0.1.0"
authors = ["Petrus Batalha <petrus.batalha1@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.5", features = ["full"] }
structopt = "0.3.21"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
yaml-rust = "0.4"
reqwest = { version = "0.10.9", features = ["json"] }
base64 = "0.13.0"
rpassword = "5.0.0"